<resources>
    <string name="app_name">My Music</string>
    <string name="shuffle_btn">Shuffle</string>
    <string name="favorite_btn">Favorites</string>
    <string name="playlist_btn">Playlists</string>
    <string name="total_songs">Total Songs</string>
    <string name="world_of_music">World of Music</string>
    <string name="song_name">Song Name</string>
    <string name="back_button">Back</string>
    <string name="start_tv">00:00</string>
    <string name="end_tv">Loading...</string>
    <string name="repeat_button">Repeat</string>
    <string name="equalizer_button">Equalizer</string>
    <string name="timer_button">Timer</string>
    <string name="share_button">Share</string>

</resources>